--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 	<title>Document</title>
 </head>
 <body>
+	<div class="dot-1 dot"></div>
+	<div class="dot-2 dot"></div>
+	<div class="dot-3 dot"></div>
+	<div class="dot-4 dot"></div>
+	<div class="dot-5 dot"></div>
+	<div class="dot-6 dot"></div>
+	<div class="dot-7 dot"></div>
+
+
+
+
+
 	<script src="script.js"></script>
 </body>
 </html>
