--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div id="option-a" class="option-a"></div>
-        <div id="option-b" class="option-b"></div>
-
-    </header>
+    <img src="./sups.png" alt="sups">
+    <button id="btn">Лети </button>
+    <button id="reset">На место</button>
     <script src="script.js"></script>
 </body>
 </html>
